# communicator

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  CommandInterpreter.cpp  CommandInterpreter.h  CommunicatorClient.cpp  CommunicatorClient.h  Screen.cpp  Screen.h  Talkative.cpp  Talkative.h  client.cpp
src/client/: CMakeLists.txt  CommunicatorClient.h  client.cpp
src/server/: CMakeLists.txt  server.cpp
src/tui/: CMakeLists.txt  CommandBox.cpp  CommandBox.h  EchoBox.cpp  EchoBox.h  MainLayout.cpp  MainLayout.h  WidgetsConfiguration.h
src/tui/headers/: CommandBox.h  EchoBox.h
src/utilities/: Talkative.cpp  Talkative.h
